<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/currency_to_be_converted"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Enter"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/from_currency"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_spinner">

            <Spinner
                android:id="@+id/convert_from"
                android:dropDownSelector="@color/cardview_dark_background"
                android:layout_width="250dp"
                android:layout_height="36dp"
                android:layout_gravity="center"/>
        </RelativeLayout>

        <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/to_currency"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_spinner">

            <Spinner
                android:id="@+id/convert_to"
                android:layout_width="250dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                tools:ignore="InvalidId" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/currency_converted"

        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/result"
        android:enabled="false"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/convert"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal" />




</LinearLayout>